nullaway_error_bc96e0f5-9bb2-4565-b95c-f695f05a8c96.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/aws/Route53Binder.java:323: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return resourceRecordSet;
            ^
